QS-958: Limit checkboxes text and toggle text radios into radios if text is too long. Fix some create thread styles

--- a/src/scss/_partials/_input-checkbox.scss
+++ b/src/scss/_partials/_input-checkbox.scss
@@ -1,3 +1,9 @@
+.list-block .checkbox-list {
+	li::after {
+		content: none;
+	}
+}
+
 .label-checkbox {
 	.item-inner {
 		.item-title {
