--- a/src/scss/_partials/_text-radios.scss
+++ b/src/scss/_partials/_text-radios.scss
@@ -1,3 +1,9 @@
+.list-block .checkbox-title {
+  font-size: 0.8em;
+  font-weight: bold;
+  text-align: center;
+}
+
 .text-radios {
   clear: both;
   margin: auto;
